<resources>
    <string name="app_name">Benzina</string>
    <string name="car_brand">Марка машины</string>
    <string name="car_model">Модель машины</string>
    <string name="car_year">Год машины</string>
    <string name="car_distance">Пробег машины</string>
    <string name="car_engine">Объём двигателя</string>
    <string name="car_rate">Смешанный расход авто</string>
    <string name="next">Далее</string>
    <string name="add_fuel">Заправить</string>
    <string name="add">Добавить</string>
    <string name="speed">Скорость</string>
    <string name="kmh">км/ч</string>
    <string name="liter">л</string>
    <string name="rate">Расход</string>
    <string name="_0_00">0.00</string>
    <string name="distance">Расстояние</string>
    <string name="km">км</string>
    <string name="route_time">Время в дороге</string>
    <string name="start_route">Начать запись</string>
    <string name="end_route">Закончить запись</string>
    <string name="stats">Статистика</string>
    <string name="average_speed">Средняя скорость:</string>
    <string name="look_stats_button">Посмотреть статистику</string>
    <string name="hello_text">Приложение Benzina поможет отслеживать за расходами топлива твоего авто.</string>
    <string name="autoAboutInfo">Информация об авто</string>
    <string name="add_car_info_hint">Для точного расчета автомобиля нужно узнать смешанный расход в интернете, указав характеристики вашего автомобиля, и найти графу смешанного расхода.</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="currency">Валюта</string>
    <string name="price">Цена за у.е.</string>
    <string name="volume">Объём</string>
    <string name="spending_on_fuel">Траты на бензин</string>
    <string name="in_rubs">В рублях:</string>
    <string name="in_grivn">В гривнах:</string>
    <string name="in_pounds">В фунтах:</string>
    <string name="in_euro">В евро:</string>
    <string name="in_dollars">В долларах:</string>
    <string name="_7days">7 дней</string>
    <string name="_30_days">30 дней</string>
    <string name="_180_days">180 дней</string>
    <string name="_365_days">365 дней</string>
    <string name="num_of_trips">Количество поездок</string>
    <string name="fuel_consumption">Расход топлива</string>
    <string name="distance_covered">Пройденная дистанция</string>
    <string name="added">Добавлено</string>
    <string name="not_all_fields">Не все поля заполнены</string>
    <string name="change_lang">Выбрать язык</string>
</resources>