<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fuel_stats_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fuel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/spending_on_fuel"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_rubs_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/in_rubs"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rub_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elements_margin"
            android:layout_weight="1"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/_0_00"
            android:textColor="@color/blockTextColor"
            android:textSize="@dimen/blockTextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_grivn_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/in_grivn"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grivn_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elements_margin"
            android:layout_weight="1"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/_0_00"
            android:textColor="@color/blockTextColor"
            android:textSize="@dimen/blockTextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_pounds_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/in_pounds"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pounds_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elements_margin"
            android:layout_weight="1"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/_0_00"
            android:textColor="@color/blockTextColor"
            android:textSize="@dimen/blockTextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_euro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/in_euro"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/euro_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elements_margin"
            android:layout_weight="1"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/_0_00"
            android:textColor="@color/blockTextColor"
            android:textSize="@dimen/blockTextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_dollars_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/in_dollars"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dollars_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elements_margin"
            android:layout_weight="1"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/_0_00"
            android:textColor="@color/blockTextColor"
            android:textSize="@dimen/blockTextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/last_week_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_buttons_margin"
            android:text="@string/_7days" />

        <com.google.android.material.chip.Chip
            android:id="@+id/last_month_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_buttons_margin"
            android:text="@string/_30_days" />

        <com.google.android.material.chip.Chip
            android:id="@+id/last_half_year_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_buttons_margin"
            android:text="@string/_180_days" />

        <com.google.android.material.chip.Chip
            android:id="@+id/last_year_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_buttons_margin"
            android:text="@string/_365_days" />

    </LinearLayout>

</LinearLayout>